@@ -53,4 +53,27 @@ public class MemoryTest extends TestCase {
         catch(IndexOutOfBoundsException e) {
         }
     }
+
+    public void testAlignment() {
+        final int SIZE = 128;
+        Memory base = new Memory(SIZE);
+        for (int align=1;align < 8;align *= 2) {
+            Memory unaligned = base;
+            long mask = ~((long)align - 1);
+            if ((base.peer & mask) == base.peer)
+                unaligned = (Memory)base.share(1, SIZE-1);
+            Pointer aligned = unaligned.align(align);
+            assertEquals("Memory not aligned",
+                         aligned.peer & mask, aligned.peer);
+        }
+        try {
+            base.align(-1);
+            fail("Negative alignments not allowed");
+        }
+        catch(IllegalArgumentException e) { }
+    }
+
+    public static void main(String[] args) {
+        junit.textui.TestRunner.run(MemoryTest.class);
+    }
 }
